added section 1- career interests

--- a/index.html
+++ b/index.html
@@ -14,33 +14,46 @@
 	</head>
 	<body class="is-preload">
 
-		<!-- Header -->
-			<section id="header">
+		<!-- About Me -->
+			<section id="about-me">
 				<div class="inner">
 					<span class="icon solid major fa-cloud"></span>
 					<h1>Hi, I'm <strong>Jing Yi</strong>,<br /></h1>
-					<h2>A final year student from National University of Singapore</h2>
+					<h2>Final Year Student at the National University of Singapore</h2>
+					<h3>Majoring in Data Science and Analytics and Minoring in Computer Science.</h3>
 					</div>
-					<p>I am currently majoring in Data Science and Analytics and minoring in Computer Science.</p>
+					<p>
+						I am passionate in learning and applying new technologies to solve modern problems and mine insights from data to further improve the world we live in.<br />
+						The education that I went through has equipped me with foundational skills like Machine Learning, Artifical Intelligence, Statistical Analysis, Data Engineering, Data Visualisation, Cloud Computing etc.<br />
+					</p>
+					<p>
+						Other than my academic pursuits, I am also an active individual who seeks to try as many sports as possible during my lifetime. Currently, I am more invested in Sport Climbing during my free time and am a certified Wall Activity Supervisor for the NUS Climbing Club since 2021.
+					</p>
 					<ul class="actions special">
-						<li><a href="#one" class="button scrolly">About Me</a></li>
+						<li><a href="#career-interests" class="button scrolly">More About Me</a></li>
 					</ul>
 				</div>
 			</section>
 
-		<!-- One -->
-			<section id="one" class="main style1">
+		<!-- Career Interests -->
+			<section id="career-interests" class="main style1">
 				<div class="container">
 					<div class="row gtr-150">
 						<div class="col-6 col-12-medium">
 							<header class="major">
-								<h2>Lorem ipsum dolor adipiscing<br />
-								amet dolor consequat</h2>
+								<h2>Career Interests<br />
+								</h2>
 							</header>
-							<p>Adipiscing a commodo ante nunc accumsan et interdum mi ante adipiscing. A nunc lobortis non nisl amet vis sed volutpat aclacus nascetur ac non. Lorem curae et ante amet sapien sed tempus adipiscing id accumsan.</p>
+							<p>I am open to take on the following roles from July/August 2023:</p>
+							<ul>
+								<li> Data Analyst </li>
+								<li> Data Engineer </li>
+								<li> ML/AI Engineer </li>
+								<li> Data Scientist </li>
+							</ul>
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
-							<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/climbing pic.jpg" alt="" /></span>
 						</div>
 					</div>
 				</div>
@@ -452,7 +465,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<li><a href="mailto:jingyiyanlol@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					<li>&copy; Copyright</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 				</ul>
 			</section>
 
