renamed ID=one to career-interests

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<body class="is-preload">
 
 		<!-- About Me -->
-			<section id="about-me">
+			<section id="header">
 				<div class="inner">
 					<span class="icon solid major fa-cloud"></span>
 					<h1>Hi, I'm <strong>Jing Yi</strong>,<br /></h1>
@@ -53,7 +53,7 @@
 							</ul>
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
-							<span class="image fit"><img src="images/climbing pic.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/climbing pic.jpg" alt="myself_climbing" style="width:500px;height:600px;"/></span>
 						</div>
 					</div>
 				</div>
