added padding for para in header section

--- a/index.html
+++ b/index.html
@@ -24,10 +24,13 @@
 					</div>
 					<p>
 						I am passionate in learning and applying new technologies to solve modern problems and mine insights from data to further improve the world we live in.<br />
-						The education that I went through has equipped me with foundational skills like Machine Learning, Artifical Intelligence, Statistical Analysis, Data Engineering, Data Visualisation, Cloud Computing etc.<br />
+						The education that I went through has equipped me with foundational skills like Machine Learning, Artifical Intelligence, Statistical Analysis, <br />
+						Data Engineering, Data Visualisation, Cloud Computing etc.<br />
 					</p>
 					<p>
-						Other than my academic pursuits, I am also an active individual who seeks to try as many sports as possible during my lifetime. Currently, I am more invested in Sport Climbing during my free time and am a certified Wall Activity Supervisor for the NUS Climbing Club since 2021.
+						Other than my academic pursuits, I am also an active individual who seeks to try as many sports as possible during my lifetime. <br />
+						Currently, I am more invested in Sport Climbing during my free time and <br />
+						am a certified Wall Activity Supervisor for the NUS Climbing Club since 2021.
 					</p>
 					<ul class="actions special">
 						<li><a href="#career-interests" class="button scrolly">More About Me</a></li>
