trying out justifying a para

--- a/index.html
+++ b/index.html
@@ -22,14 +22,13 @@
 					<h2>Final Year Student at the National University of Singapore</h2>
 					<h3>Majoring in Data Science and Analytics and Minoring in Computer Science.</h3>
 					</div>
-					<p>
-						I am passionate in learning and applying new technologies to solve modern problems and mine insights from data to further improve the world we live in.<br />
-						The education that I went through has equipped me with foundational skills like Machine Learning, Artifical Intelligence, Statistical Analysis, <br />
-						Data Engineering, Data Visualisation, Cloud Computing etc.<br />
+					<p align="justify">
+						I am passionate in learning and applying new technologies to solve modern problems and mine insights from data to further improve the world we live in. The education that I went through has equipped me with foundational skills like Machine Learning, 
+						Artifical Intelligence, Statistical Analysis, Data Engineering, Data Visualisation, Cloud Computing etc.
 					</p>
-					<p>
-						Other than my academic pursuits, I am also an active individual who seeks to try as many sports as possible during my lifetime. <br />
-						Currently, I am more invested in Sport Climbing during my free time and <br />
+					<p align="justify">
+						Other than my academic pursuits, I am also an active individual who seeks to try as many sports as possible during my lifetime. 
+						Currently, I am more invested in Sport Climbing during my free time and 
 						am a certified Wall Activity Supervisor for the NUS Climbing Club since 2021.
 					</p>
 					<ul class="actions special">
