testing image resizing

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 					</div>
 					<p align="justify">
 						I am passionate in learning and applying new technologies to solve modern problems and mine insights from data to further improve the world we live in. The education that I went through has equipped me with foundational skills like Machine Learning, 
-						Artifical Intelligence, Statistical Analysis, Data Engineering, Data Visualisation, Cloud Computing etc.
+						Artifical Intelligence, Statistical Analysis, Data Engineering, Data Visualisation, Cloud Computing etc. <br />
 					</p>
 					<p align="justify">
 						Other than my academic pursuits, I am also an active individual who seeks to try as many sports as possible during my lifetime. 
@@ -32,13 +32,13 @@
 						am a certified Wall Activity Supervisor for the NUS Climbing Club since 2021.
 					</p>
 					<ul class="actions special">
-						<li><a href="#career-interests" class="button scrolly">More About Me</a></li>
+						<li><a href="#one" class="button scrolly">More About Me</a></li>
 					</ul>
 				</div>
 			</section>
 
 		<!-- Career Interests -->
-			<section id="career-interests" class="main style1">
+			<section id="one" class="main style1">
 				<div class="container">
 					<div class="row gtr-150">
 						<div class="col-6 col-12-medium">
@@ -55,7 +55,7 @@
 							</ul>
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
-							<span class="image fit"><img src="images/climbing pic.jpg" alt="myself_climbing" style="width:500px;height:600px;"/></span>
+							<span class="image fit"><img src="images/climbing pic.jpg" alt="myself_climbing" style="width:300px;height:450px;"/></span>
 						</div>
 					</div>
 				</div>
