--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<!-- About Me -->
 			<section id="header">
 				<div class="inner">
-					<span class="icon solid major fa-cloud"></span>
+					<span class="icon solid major fa-smile-wink"></span>
 					<h1>Hi, I'm <strong>Jing Yi</strong>,<br /></h1>
 					<h2>Final Year Student at the National University of Singapore</h2>
 					<h3>Majoring in Data Science and Analytics and Minoring in Computer Science.</h3>
@@ -37,7 +37,7 @@
 				</div>
 			</section>
 
-		<!-- Career Interests -->
+		<!-- One: Career Interests -->
 			<section id="one" class="main style1">
 				<div class="container">
 					<div class="row gtr-150">
@@ -55,86 +55,128 @@
 							</ul>
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
-							<span class="image fit"><img src="images/climbing pic.jpg" alt="myself_climbing" style="width:300px;height:450px;"/></span>
+							<span class="image fit"><img src="images/climbing pic.jpg" alt="myself_climbing" style="width:270px;height:350px;"/></span>
 						</div>
 					</div>
 				</div>
 			</section>
 
-		<!-- Two -->
+		<!-- Two: Skills -->
 			<section id="two" class="main style2">
 				<div class="container">
-					<div class="row gtr-150">
-						<div class="col-6 col-12-medium">
-							<ul class="major-icons">
-								<li><span class="icon solid style1 major fa-code"></span></li>
-								<li><span class="icon solid style2 major fa-bolt"></span></li>
-								<li><span class="icon solid style3 major fa-camera-retro"></span></li>
-								<li><span class="icon solid style4 major fa-cog"></span></li>
-								<li><span class="icon solid style5 major fa-desktop"></span></li>
-								<li><span class="icon solid style6 major fa-calendar"></span></li>
-							</ul>
-						</div>
-						<div class="col-6 col-12-medium">
-							<header class="major">
-								<h2>Lorem ipsum dolor adipiscing<br />
-								amet dolor consequat</h2>
-							</header>
-							<p>Adipiscing a commodo ante nunc accumsan interdum mi ante adipiscing. A nunc lobortis non nisl amet vis volutpat aclacus nascetur ac non. Lorem curae eu ante amet sapien in tempus ac. Adipiscing id accumsan adipiscing ipsum.</p>
-							<p>Blandit faucibus proin. Ac aliquam integer adipiscing enim non praesent vis commodo nunc phasellus cubilia ac risus accumsan. Accumsan blandit. Lobortis phasellus non lobortis dit varius mi varius accumsan lobortis. Blandit ante aliquam lacinia lorem lobortis semper morbi col faucibus vitae integer placerat accumsan orci eu mi odio tempus adipiscing adipiscing adipiscing curae consequat feugiat etiam dolore.</p>
-							<p>Adipiscing a commodo ante nunc accumsan interdum mi ante adipiscing. A nunc lobortis non nisl amet vis volutpat aclacus nascetur ac non. Lorem curae eu ante amet sapien in tempus ac. Adipiscing id accumsan adipiscing ipsum.</p>
+					<div>
+						<header class="major">
+							<h2>Technical Skills</h2>
+						</header>
+						<div class="row gtr-150">
+							<div class="col-6 col-12-medium">
+								<h3>Programming Languages</h3>
+								<span class="icon solid major fa-code"></span>
+								<ul>
+									<li> Python </li>
+									<li> R </li>
+									<li> Java </li>
+									<li> PostgreSQL </li>
+								</ul>
+							</div>
+
+							<div class="col-6 col-12-medium">
+								<h3>Data Visualization Softwares</h3>
+								<span class="icon solid major fa-chart-bar"></span>
+								<ul>
+									<li> Power BI </li>
+									<li> Tableau </li>
+									<li> SAS Studio </li>
+								</ul>
+							</div>
+							
+							<div class="col-6 col-12-medium">
+								<h3>Machine Learning Libraries (Python)</h3>
+								<span class="icon solid major fa-robot"></span>
+								<ul>
+									<li> Scikit-Learn </li>
+									<li> Keras </li>
+									<li> PyTorch </li>
+									<li> MlFlow </li>
+								</ul>
+							</div>	
+
+							<div class="col-6 col-12-medium">
+								<h3>Cloud Computing</h3>
+								<span class="icon solid major fa-cloud"></span>
+								<ul>
+									<li> Azure </li>
+									<li> AWS </li>
+								</ul>
+							</div>
+
 						</div>
 					</div>
 				</div>
 			</section>
 
-		<!-- Three -->
+		<!-- Three: Work Experience -->
 			<section id="three" class="main style1 special">
 				<div class="container">
 					<header class="major">
-						<h2>Adipiscing amet consequat</h2>
+						<h2>Work/ Internship Experiences</h2>
 					</header>
-					<p>Ante nunc accumsan et aclacus nascetur ac ante amet sapien sed.</p>
 					<div class="row gtr-150">
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic02.jpg" alt="" /></span>
-							<h3>Magna feugiat lorem</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
+							<h3>Data Analyst Intern</h3>
+							<h4>Screening Eagle Dreamlab</h4>
+							<p>DEC 2022 - PRESENT</p>
 							<ul class="actions special">
-								<li><a href="#" class="button">More</a></li>
+								<li><a href="#" class="button">Learn More</a></li>
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic03.jpg" alt="" /></span>
-							<h3>Magna feugiat lorem</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
+							<h3>Advanced Analytics Associate (Intern)</h3>
+							<h4>Avanade Asia Pte Ltd</h4>
+							<p>MAY 2022 - AUG 2022</p>
 							<ul class="actions special">
-								<li><a href="#" class="button">More</a></li>
+								<li><a href="#" class="button">Learn More</a></li>
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-							<h3>Magna feugiat lorem</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
+							<h3>Referall Call Centre Agent</h3>
+							<h4>OneCare Medical Group</h4>
+							<p>MAY 2021 - JUN 2019</p>
 							<ul class="actions special">
-								<li><a href="#" class="button">More</a></li>
+								<li><a href="#" class="button">Learn More</a></li>
 							</ul>
 						</div>
 					</div>
 				</div>
 			</section>
 
-		<!-- Four -->
+		<!-- Four: Projects -->
 			<section id="four" class="main style2 special">
 				<div class="container">
 					<header class="major">
-						<h2>Ipsum feugiat consequat?</h2>
+						<h2>Projects</h2>
 					</header>
-					<p>Sed lacus nascetur ac ante amet sapien.</p>
-					<ul class="actions special">
-						<li><a href="#" class="button wide primary">Sign Up</a></li>
-						<li><a href="#" class="button wide">Learn More</a></li>
-					</ul>
+					<div class="row gtr-150">
+						<div class="col-4 col-12-medium">
+							<span class="image fit"><img src="images/pic02.jpg" alt="" /></span>
+							<h3>RNA m6A Modification Classification</h3>
+							<p>DSA4262 (Sense-making Case Analysis: Health and Medicine)</p>
+							<ul class="actions special">
+								<li><a href="https://github.com/jingyiyanlol/PROJ_MAYJ_DSA4262" class="button">GitHub Link</a></li>
+							</ul>
+						</div>
+						<div class="col-4 col-12-medium">
+							<span class="image fit"><img src="images/pic03.jpg" alt="" /></span>
+							<h3>Authenticity Prediction & Ranking Branded Goods of E-Commerce Platforms</h3>
+							<p>CS4225 (Big Data Systems for Data Science)</p>
+							<ul class="actions special">
+								<li><a href="#" class="button">Video Link</a></li>
+							</ul>
+						</div>
+					</div>
 				</div>
 			</section>
 
@@ -458,14 +500,16 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 		<!-- Footer -->
 			<section id="footer">
+				<div class="container">
+					<header>
+						<h2>Get In Touch</h2>
+					</header>
 				<ul class="icons">
-					<!-- <li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li> -->
-					<!-- <li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li> -->
-					<!-- <li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li> -->
 					<li><a href="https://www.linkedin.com/in/jing-yi-yan-907848106/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 					<li><a href="https://github.com/jingyiyanlol" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 					<li><a href="mailto:jingyiyanlol@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
+				</div>
 				<ul class="copyright">
 					<li>&copy; Copyright</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 				</ul>
