--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 						</div>
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic03.jpg" alt="" /></span>
-							<h3>Advanced Analytics Associate (Intern)</h3>
+							<h3>Advanced Analytics Associate</h3>
 							<h4>Avanade Asia Pte Ltd</h4>
 							<p>MAY 2022 - AUG 2022</p>
 							<ul class="actions special">
@@ -142,7 +142,7 @@
 						</div>
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-							<h3>Referall Call Centre Agent</h3>
+							<h3>Referral Call Centre Agent</h3>
 							<h4>OneCare Medical Group</h4>
 							<p>MAY 2021 - JUN 2019</p>
 							<ul class="actions special">
@@ -170,7 +170,8 @@
 						</div>
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic03.jpg" alt="" /></span>
-							<h3>Authenticity Prediction & Ranking Branded Goods of E-Commerce Platforms</h3>
+							<h3>Authenticity Prediction & Ranking Branded Goods of <br />
+							E-Commerce Platforms</h3>
 							<p>CS4225 (Big Data Systems for Data Science)</p>
 							<ul class="actions special">
 								<li><a href="#" class="button">Video Link</a></li>
@@ -502,7 +503,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<section id="footer">
 				<div class="container">
 					<header>
-						<h2>Get In Touch</h2>
+						<h2>Get In Touch With Me!</h2>
 					</header>
 				<ul class="icons">
 					<li><a href="https://www.linkedin.com/in/jing-yi-yan-907848106/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
